[package]
name = "database"
version = "0.1.0"
authors = ["arian <counterstrike1337@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_json = "1.0.62"
bincode = "1.3.1"
hashmap = { path = "../hashmap" }